# miniplan

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.e2e-stubs.yml  docker-compose.e2e.yml  docker-compose.yml
backend/: docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05f5b4ba628d_miniplan_zuteilung_einstellungen.py  27a105adf0f7_gruppen_mindestanzahl_pro_dienst_typ.py  3d63a122b3bc_stammdaten_gruppen_minis_dienst_typen.py  3d7ea724e31e_indizes_fuer_ferienzeitraum_und_.py  3f14e737a81e_initial_schema.py  5c13f29a84b9_filtertags_pro_pfarrei.py  6ed9239f2f5d_ferienzeiten_und_bundesland.py  6f7471145215_miniplan_gottesdienst_dienstbedarf_.py  79f9de967fe3_login_versuche_fuer_rate_limit.py  7e7166e2289c_pfarrei_id_autoincrement.py  905b8fdfdd3c_filtertag_blocker.py  a868d4469175_mini_miniplan_limit_und_ignoriere_flags.py  b01bc2026715_on_delete_cascade_fuer_pfarrei_scoped_.py  bf1df9e7930a_dienst_typ_erforderliche_filtertags_.py  c3b3ace1b1f5_dienst_typ_zeige_label_und_gottesdienst_.py  c7ce7adb7115_feiertag_einstellungen.py  dd2114fedca4_einladungen.py  ef819a33987c_mini_und_miniplan_max_einsaetze.py  (+2 more)
backend/app/: cli.py  config.py  database.py  deps.py  main.py  rate_limit.py  security.py
backend/app/api/: admin.py  (+13 more)
backend/tests/: conftest.py  test_admin.py  test_api_helpers.py  test_auth.py  test_cli.py  test_config.py  test_config_secret.py  test_demo_seed.py  test_dienst_typen.py  test_einladungen.py  test_feiertage.py  test_ferien_api.py  test_ferien_sync.py  test_filtertag_blocker.py  test_filtertag_validation.py  test_filtertags.py  test_gottesdienste.py  test_gruppen.py  test_miniplaene.py  test_miniplaene_vorschau.py  test_miniplan_operations.py  test_minis.py  test_pfarrei_bild.py  test_rate_limit.py  test_roles.py  test_stammdaten_seed.py  test_static_spa.py  test_typst_render.py  test_verfuegbarkeit.py  test_zuteilung.py  test_zuteilung_annealing.py
(+132 files in other folders)
