[project]
name = "miniplan-backend"
version = "0.1.0"
description = "Backend fuer die Miniplan Ministranten-Dienstplan-App"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "pyjwt>=2.9",
    "bcrypt>=4.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "holidays>=0.60",
    "mistune>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx2>=2.5",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008 (function-call-in-default-argument) ist ein False Positive für FastAPIs
# `Depends(...)`-Muster, das ausdrücklich als Default-Argument verwendet wird.
ignore = ["B008"]
